tests/traci/get_variable/ArealDetector/errors/UnsupportedVariable/errors.traci
#Error while connecting: tcpip::Socket::connect() @ connect: Connection refused
Error: Answered with error to command 0xad: Get Areal Detector Variable: unsupported variable 0xff specified
